--- a/package.json
+++ b/package.json
@@ -8,15 +8,31 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "i18n": "^0.13.3",
     "next": "12.0.7",
+    "prettier": "^2.5.1",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "styled-components": "^5.3.3"
   },
   "devDependencies": {
+    "@types/i18n": "^0.13.2",
     "@types/node": "17.0.1",
     "@types/react": "17.0.37",
-    "eslint": "8.5.0",
-    "eslint-config-next": "12.0.7",
-    "typescript": "4.5.4"
+    "@types/styled-components": "^5.1.18",
+    "@typescript-eslint/eslint-plugin": "^4.31.2",
+    "eslint": "7.32.0",
+    "eslint-config-next": "11.1.2",
+    "eslint-config-prettier": "6.11.0",
+    "eslint-config-react-app": "^6.0.0",
+    "eslint-plugin-flowtype": "^6.1.0",
+    "eslint-plugin-import": "^2.24.2",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-prettier": "3.1.4",
+    "eslint-plugin-react": "^7.26.0",
+    "eslint-plugin-react-hooks": "^4.2.0",
+    "typescript": "4.5.4",
+    "babel-eslint": "^10.1.0",
+    "babel-plugin-styled-components": "^1.13.2"
   }
 }
