--- a/package.json
+++ b/package.json
@@ -7,6 +7,11 @@
     "start": "next start",
     "lint": "next lint"
   },
+  "engines": {
+    "npm": ">=6.4.1",
+    "node": ">=10.13.0",
+    "yarn": "1.x"
+  },
   "dependencies": {
     "i18n": "^0.13.3",
     "next": "12.0.7",
