--- a/package.json
+++ b/package.json
@@ -8,6 +8,11 @@
     "lint": "next lint",
     "heroku-postbuild": "npm run build"
   },
+  "engines": {
+    "npm": "6.x",
+    "node": "14.x",
+    "yarn": "1.x"
+  },
   "dependencies": {
     "i18n": "^0.13.3",
     "next": "12.0.7",
